--- a/sass/sections/_about-shop.scss
+++ b/sass/sections/_about-shop.scss
@@ -18,5 +18,11 @@
          line-height: 23px;
          color: #241400;
       }
+      .delivery_title{
+         font-weight: 400;
+         font-size: 12px;
+         line-height: 23px;
+         color: #241400;
+      }
    }
 }
