--- a/sass/sections/_swiper.scss
+++ b/sass/sections/_swiper.scss
@@ -25,6 +25,7 @@
       }
    }
    .mySwiper{
+      padding-top: 50px;
       .slider{
             .card{
                box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
