--- a/sass/sections/_catalog.scss
+++ b/sass/sections/_catalog.scss
@@ -7,6 +7,7 @@
    }
    .card{
       box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+      width: 223px;
       h4{
          font-weight: 700;
          font-size: 14px;
